--- a/frontend/src/pages/Register/register.module.css
+++ b/frontend/src/pages/Register/register.module.css
@@ -1,11 +1,43 @@
 /*Button Label*/
-.screen .login-button {
+.loginButton {
     left: 0 !important;
     top: 48px !important;
 }
 
-.screen .login-buttons-instance {
+.loginButtonsInstance {
     color: #000000 !important;
     left: 176px !important;
     top: 1px;
+}
+
+/*Forms*/
+.overlapContainer {
+    width: 439px !important;
+}
+
+/*Email from*/
+.emailForm {
+    left: 0 !important;
+    position: absolute !important;
+    top: 0 !important;
+    width: 437px !important;
+}
+
+.emailFormIcon {
+    left: 401px !important;
+}
+
+/*Password forms*/
+.newPasswordForm {
+    left: 0 !important;
+    position: absolute !important;
+    top: 110px !important;
+    width: 437px !important;
+}
+
+.newPasswordFormRepeat {
+    left: 0 !important;
+    position: absolute !important;
+    top: 220px !important;
+    width: 437px !important;
 }
